# skax

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  app.py  deployment_manifest.json  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh  verify_deployment.py
.claude/: settings.local.json
.streamlit/: config.toml
agents/: __init__.py  agent_config.py  analyzer.py  formatter.py  refiner.py  reviewer.py  structurer.py  supervisor.py  supervisor_types.py  writer.py  writer_helpers.py
api/: main.py
docs/: ADVANCED_PATTERNS.md  AGENT_IO_EXAMPLES.md  AI_AGENT_ANALYSIS.md  DIFFERENTIATION_FROM_EXAMPLES.md  FINAL_PROJECT_REPORT.md  HITL_GUIDE.md  LANGGRAPH_ARCHITECTURE_REVIEW.md  MULTI_AGENT_ANALYSIS.md  MULTI_AGENT_DIAGRAM.md  PROJECT_REPORT.md  PROJECT_STRUCTURE.md  README.md  SYSTEM_DESIGN.md  SYSTEM_DIAGRAM.md  WORKFLOW_GUIDE.md  agent-design.md  api-spec.md  architecture.md  architecture.mermaid  deployment-guide.md  human-interrupt-guide.md  implementation_plan_advanced_interrupts.md  implementation_plan_error_pipeline.md  implementation_plan_schema_separation.md  web-search-design.md
graph/: __init__.py  hitl_config.py  interrupt_types.py  interrupt_utils.py  state.py  subgraphs.py  workflow.py
logs/: execution_20251228_201445.jsonl  execution_20251228_215344.jsonl  execution_20251229_023905.jsonl
mcp/: __init__.py  file_utils.py  mcp_client.py  web_client.py  web_search.py
prompts/: __init__.py  analyzer_prompt.py  business_plan_prompt.py  discussion_prompt.py  formatter_prompt.py  refiner_prompt.py  (+3 more)
(+137 files in other folders)
